--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <string name="app_name">"GCM Test "</string>
+    <string name="app_name">"GDG Catania GCM Test"</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_about">About</string>
     <string name="str_username">Username</string>
