--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="gcm_notification_placeholder_text_template">Messaggio: %1$s </string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="str_message">Hai ricevuto questo messaggio dal GCM</string>
-    <string name="str_alreadyreg">Sei già registrato!\nCollegati su\nhttp://gabrielebaldoni.altervista.org/gcmgdgtest/</string>
+    <string name="str_alreadyreg">Sei già registrato!\nCollegati su\n ...</string>
     <string name="action_button_reply">Reply</string>
     <string name="action_button_refresh">Refresh</string>
     <string name="text_bigView">You said %1$s and lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.</string>
